--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "http-server": "^0.8.5",
-    "react": "^0.14.3"
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18",
